--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "db.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": ""
+    "start": "node BL/userLogic.js"
   },
   "author": "",
   "license": "ISC",
