--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "db.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node BL/userLogic.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "mongoose": "^6.3.5"
   }
 }
