--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3001
-SECRET_JWT=1234
+SECRET_JWT=6586587GJKVJKGJKHSKLVHERI9GU59T35WRFWRG54
+MONGO_URL = 'mongodb+srv://Admin:Admin123@cluster0.zyg0zzq.mongodb.net/test1?retryWrites=true&w=majority'
